# pyatlas

./: .env.template  .gitignore  .prettierignore  ANALYSIS.md  DESIGN.md  DEVELOPMENT.md  Dockerfile  DockerfileCPU  IMPROVE.md  INSPIRATION.md  LOGIC.md  Makefile  PLAN.md  PROBLEM.md  README.md  REPORT.md  SETUP.md  TODO.md  config.dev.toml  config.prod.toml  docker-compose.yml  hyperparameter_results.csv  hyperparameter_search.py  pypi_bigquery.sql  pyproject.toml
.github/actions/setup-poetry-env/: action.yml
.github/actions/setup-python-env/: action.yml
.github/workflows/: deploy-gh-pages.yml  main.yml  publish.yml
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/components/: GitHubButton.tsx
frontend/app/utils/: search.ts
frontend/public/data/: .gitignore  clusters2.json  packages2.json
frontend/src/: App.tsx  index.css  vite-env.d.ts
frontend/src/components/: ClusterLabels.tsx  ClusterLegend.tsx  Constellations.tsx  GalaxyCanvas.tsx  HoverLabel.tsx  PackageDetail.tsx  PackageLabels.tsx  PackagePoints.tsx  SearchBar.tsx  Sidebar.tsx  UIOverlay.tsx  WelcomeBanner.tsx
frontend/src/components/PackagePoints/: HoverPlane.tsx  PackagePoints.tsx  index.ts  usePackagePicking.ts  usePackagePointsMesh.ts  useShaderUniforms.ts
frontend/src/components/PackagePoints/effects/: useHighlightEffect.ts  useHoverEffect.ts  useSelectionEffect.ts  useVisibilityEffect.ts
frontend/src/components/layout/: DesktopLayout.tsx  MobileLayout.tsx  TopBar.tsx
frontend/src/components/layout/Sidebar/: Sidebar.tsx  SidebarHeader.tsx  SidebarMenu.tsx  SidebarSearch.tsx
frontend/src/components/modals/: ClustersModal.tsx  ControlsModal.tsx  FAQModal.tsx  Modal.tsx  Modals.tsx
frontend/src/components/shared/: Chip.tsx  ClusterList.tsx  FloatingGitHubButton.tsx  ZoomControls.tsx
frontend/src/hooks/: useCameraAnimation.ts  useDataBounds.ts  useIsMobile.ts  useModal.ts  useNormalizedZoom.ts  usePointHover.ts  useViewportBounds.ts  useZoomTracker.ts
frontend/src/shaders/: glsl.d.ts  instancedQuad.frag  instancedQuad.vert  instancedQuadShader.ts  pointShader.ts
frontend/src/store/: useGalaxyStore.ts
frontend/src/types/: index.ts
frontend/src/utils/: PackageGrid.ts  cameraConstants.ts  colorPalette.ts  coordinateConversion.ts  dataBounds.ts  dataLoader.ts  formatDownloads.ts  packageUtils.ts  sizeScaling.ts  spatialIndex.ts
notebooks/: inspect.py  plot.py  umap.py
notebooks/__marimo__/session/: inspect.py.json
pyatlas/: config.py
pyatlas/clustering/: clustering.py  constellations.py  coordinates.py  labeling.py  metadata.py  plot_with_labels.py  plot_without_labels.py
pyatlas/data/description/: description_cleaner.py  description_parser.py
pyatlas/embeddings/: embeddings_creator.py
pyatlas/scripts/: calculate_cluster_labels.py  calculate_cluster_metadata.py  calculate_constellations.py  create_vector_embeddings.py  download_raw_dataset.py  generate_cluster_labels.py  generate_clusters.py  generate_json_outputs.py  label_clusters.py  process_raw_dataset.py  setup.py
pylens/: config.py
pylens/api/: data_loader.py  main.py  models.py
pylens/data/description/: description_cleaner.py  description_parser.py
pylens/map/: utils.py
pylens/scripts/: create_vector_embeddings.py  download_raw_dataset.py  process_raw_dataset.py  setup.py  upload_processed_datasets.py
pylens/utils/: blob_io.py
pymap/: config.py
pymap/clustering/: clustering.py  coordinates.py  labeling.py  plot_without_labels.py  utils.py
pymap/data/description/: content_type_detector.py  description_cleaner.py  description_parser.py
pymap/scripts/: calculate_cluster_labels.py  calculate_cluster_metadata.py  clustering.py  create_vector_embeddings.py  download_raw_dataset.py  generate_clusters.py  generate_json_outputs.py  label_clusters.py  process_raw_dataset.py  setup.py
pymap/utils/: logging.py
tests/: test_clustering.py  test_constellations.py  test_content_type_detector.py  test_description_cleaner.py  test_description_parser.py
tests/embeddings/: test_simple_vector_database.py
